testgateway/base-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp-v1
      version: v1
  template:
    metadata:
      labels:
        app: myapp-v1
        version: v1
        service: myapp
    spec:
      containers:
      - name: myapp-v1
        image: ikubernetes/myapp:v1
        ports:
        - containerPort: 80
