testgateway/base-deploy2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp-v2
      version: v2
  template:
    metadata:
      labels:
        app: myapp-v2
        version: v2
        service: myapp
    spec:
      containers:
      - name: myapp-v2
        image: ikubernetes/myapp:v2
        ports:
        - containerPort: 80
