testgateway/myapp-all.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-all
spec:
  ports:
  - name: http
    port: 9500
    targetPort: 80
  selector:
    service: myapp
