testgateway/all-v1-virsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp-all
spec:
  hosts:
  - myapp-all
  http:
  - route:
    - destination:
        host: myapp-all
        subset: v1
