testgateway/destinationro.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: myapp-all2
spec:
  host: myapp-all
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2 
  - name: v3
    labels:
      version: v3
