testgateway/testv.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
spec:
  hosts:
  - "*"
  gateways:
  - myapp
  http:
  - match:
    - headers:
        end-user:
          exact: jason
    route:
    - destination:
        host: myapp-all
        subset: v2
  - route:
    - destination:
        host: myapp-all
        subset: v3
